src/objects/Partner_Account_Shared_Solar_System__c.object
<CustomObject>
    <fields>
        <fullName>Compound_Key__c</fullName>
        <description>Set via before save flow and used in a duplicate rule</description>
        <label>Compound Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shared Solar Systems Eligibility</relationshipLabel>
        <relationshipName>Parent_Account_Shared_Solar_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Shared_Solar_System__c</fullName>
        <label>Shared Solar System</label>
        <referenceTo>Shared_Solar_System__c</referenceTo>
        <relationshipLabel>Partner Eligibility</relationshipLabel>
        <relationshipName>Partner_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Partner Account Shared Solar System</label>
    <nameField>
        <displayFormat>PASSS-{0000000000}</displayFormat>
        <label>Partner Account Shared Solar System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Accounts Shared Solar Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>